--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,12 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Indent
-version:      0.1
-version_from: Indent.pm
+version:      0.01
+version_from: 
 installdirs:  site
 requires:
+    Error::Simple:                 0.01
+    Tag::Parse:                    0.01
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.17
