--- a/META.yml
+++ b/META.yml
@@ -30,6 +30,7 @@ requires:
   Error::Pure: 0.08
   Exporter: 0
   Readonly: 0
+  perl: 5.6.2
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Indent
   homepage: https://github.com/tupinek/Indent
