Fix test requires.

--- a/META.yml
+++ b/META.yml
@@ -5,8 +5,10 @@ author:
 build_requires:
   English: 0
   ExtUtils::MakeMaker: 6.36
+  Term::ANSIColor: 0
   Test::More: 0
   Test::NoWarnings: 0
+  Text::ANSI::Util: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
