--- a/META.yml
+++ b/META.yml
@@ -36,4 +36,4 @@ resources:
   homepage: https://github.com/tupinek/Indent
   license: http://opensource.org/licenses/bsd-license.php
   repository: git://github.com/tupinek/Indent
-version: '0.04'
+version: 0.05
