--- a/META.yml
+++ b/META.yml
@@ -37,4 +37,4 @@ resources:
   homepage: https://github.com/tupinek/Indent
   license: http://opensource.org/licenses/bsd-license.php
   repository: git://github.com/tupinek/Indent
-version: '0.05'
+version: 0.06
