--- a/META.yml
+++ b/META.yml
@@ -34,7 +34,7 @@ requires:
   perl: 5.6.2
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Indent
-  homepage: https://github.com/tupinek/Indent
+  homepage: https://github.com/michal-josef-spacek/Indent
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/Indent
+  repository: git://github.com/michal-josef-spacek/Indent
 version: '0.06'
