--- a/META.yml
+++ b/META.yml
@@ -33,7 +33,7 @@ requires:
   Text::ANSI::Util: 0
   perl: 5.6.2
 resources:
-  bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Indent
+  bugtracker: https://github.com/michal-josef-spacek/Indent/issues
   homepage: https://github.com/michal-josef-spacek/Indent
   license: http://opensource.org/licenses/bsd-license.php
   repository: git://github.com/michal-josef-spacek/Indent
